--- a/getting_started.ipynb
+++ b/getting_started.ipynb
@@ -2,79 +2,80 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Getting Started with Xarray\n",
+    "===========================\n",
+    "\n",
+    "Welcome to the xarray tutorial. These notebooks will walk you through some of the basics of xarray and will provide you with oportunities to explore the package a bit on your own.\n",
+    "\n",
+    "Some resources for you before we get started:\n",
+    "\n",
+    "- Xarray documentation: http://xarray.pydata.org/en/latest/index.html\n",
+    "- Xarray paper: http://doi.org/10.5334/jors.148\n",
+    "- Xarray Github page: https://github.com/pydata/xarray\n",
+    "\n",
+    "In this notebook, we'll just make sure we can import xarray and access the tutorial data. After that, you should head over to the `tutorail` directory to go through the rest of the material."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import xarray\n",
     "import xarray as xr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load the air temperature dataset\n",
+    "# you can replace 'air_temperature' with `rasm` to get a different dataset\n",
+    "\n",
     "ds = xr.tutorial.load_dataset('air_temperature')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<xarray.Dataset>\n",
-       "Dimensions:  (lat: 25, lon: 53, time: 2920)\n",
-       "Coordinates:\n",
-       "  * lat      (lat) float32 75.0 72.5 70.0 67.5 65.0 62.5 60.0 57.5 55.0 52.5 ...\n",
-       "  * lon      (lon) float32 200.0 202.5 205.0 207.5 210.0 212.5 215.0 217.5 ...\n",
-       "  * time     (time) datetime64[ns] 2013-01-01 2013-01-01T06:00:00 ...\n",
-       "Data variables:\n",
-       "    air      (time, lat, lon) float32 241.2 242.5 243.5 244.0 244.09999 ...\n",
-       "Attributes:\n",
-       "    Conventions:  COARDS\n",
-       "    title:        4x daily NMC reanalysis (1948)\n",
-       "    description:  Data is from NMC initialized reanalysis\\n(4x/day).  These a...\n",
-       "    platform:     Model\n",
-       "    references:   http://www.esrl.noaa.gov/psd/data/gridded/data.ncep.reanaly..."
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<xarray.Dataset>\n",
-       "Dimensions:  (lat: 25, lon: 53)\n",
-       "Coordinates:\n",
-       "  * lat      (lat) float32 75.0 72.5 70.0 67.5 65.0 62.5 60.0 57.5 55.0 52.5 ...\n",
-       "  * lon      (lon) float32 200.0 202.5 205.0 207.5 210.0 212.5 215.0 217.5 ...\n",
-       "Data variables:\n",
-       "    air      (lat, lon) float32 260.37564 260.1826 259.88593 259.48196 ..."
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ds.mean(dim='time')"
+    "# calculate the season means\n",
+    "avg_temp = ds['air'].groupby('time.season').mean('time')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make a quick plot\n",
+    "avg_temp.plot(col='season', robust=True)"
    ]
   },
   {
