--- a/getting_started.ipynb
+++ b/getting_started.ipynb
@@ -24,7 +24,7 @@
     "- Xarray paper: http://doi.org/10.5334/jors.148\n",
     "- Xarray Github page: https://github.com/pydata/xarray\n",
     "\n",
-    "In this notebook, we'll just make sure we can import xarray and access the tutorial data. After that, you should head over to the `tutorail` directory to go through the rest of the material."
+    "In this notebook, we'll just make sure we can import xarray and access the tutorial data. After that, you should head over to the `tutorial` directory to go through the rest of the material."
    ]
   },
   {
