add temporary env variable

--- a/basic_dask.ipynb
+++ b/basic_dask.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import dask\n",
+    "import os\n",
+    "# dask.config.set({'kubernetes.worker-template.spec.image': os.environ['JUPYTER_IMAGE_SPEC']})\n",
+    "dask.config.config['kubernetes']['worker-template']['spec']['containers'][0]['image'] = os.environ['JUPYTER_IMAGE_SPEC']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from dask.distributed import Client\n",
     "from dask_kubernetes import KubeCluster"
    ]
