--- a/tutorial/1.5.xarray-input-and-output.ipynb
+++ b/tutorial/1.5.xarray-input-and-output.ipynb
@@ -32,9 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -105,7 +103,10 @@
    "outputs": [],
    "source": [
     "ds2 = xr.open_dataset('./data/rasm.nc', engine='netcdf4')\n",
-    "ds2"
+    "ds2\n",
+    "\n",
+    "# Note that only metadata/coordinates were actually read\n",
+    "# The rest of the dataset remains on disk (aka lazy loading)"
    ]
   },
   {
@@ -150,9 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# write the 4 netcdf files\n",
@@ -256,9 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "t_series.to_csv('data/rasm_point.csv')"
